<resources>
    <string name="app_name">e-care</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Login Page-->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="check_remember">Remember Me</string>
    <string name="button_login">LOGIN</string>
    <string name="text_register">Create Account</string>

    <!--Register Page-->
    <string name="hint_retype_password">Retype-Password</string>
    <string name="hint_contact">Contact Number</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="button_register">Sign Up</string>
    <string name="text_login">Login</string>

    <!--Add Elder Fragment-->
    <string name="title_add_elder">Add Elder</string>
    <string name="text_eldername">Elder Name</string>
    <string name="hint_eldername">Enter Elder Name</string>
    <string name="text_dob">Date Of Birth</string>
    <string name="hint_dob">Select the Date</string>

    <!--Add Caregiver Fragment-->
    <string name="title_add_caregiver">Add Caregiver</string>
    <string name="text_serach">Search Caregiver</string>
    <string name="button_add_caregiver">Add Caregiver</string>

    <!--Connectivity Fragment-->
    <string name="title_connectivity">Connectivity</string>
    <string name="button_search_device">Search Device</string>

    <!--Meeting Meeting Fragment-->
    <string name="doctor_name">Doctor Name</string>
    <string name="hint_doctor_name">Enter Doctor Name</string>

    <!--Meal Fragment-->
    <string name="meal_type">Select Meal Type:</string>
    <string name="meal_description">Meal Description</string>

    <!--Special Fragment-->
    <string name="heart_rate">Heart Rate</string>
    <string name="blood_temp">Blood Temperature</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="detect_after">Detect After</string>

    <!--Prescription Fragment-->
    <string name="before_breakfast">Before Breakfast</string>
    <string name="after_breakfast">After Breakfast</string>
    <string name="before_lunch">Before Lunch</string>
    <string name="after_lunch">After Lunch</string>
    <string name="before_dinner">Before Dinner</string>
    <string name="after_dinner">After Dinner</string>


    <!--Error messages-->
    <string name="err_msg_username">Enter Username</string>
    <string name="err_msg_contact">Enter Contact Number</string>
    <string name="err_msg_password">Enter Password</string>

    <!--Profile Page-->
    <string name="profile_button">Back</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="action_reports">Reports</string>

    <!--Common String-->
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="button_add_schedule">Add Schedule</string>
    <string name="button_update_schedule">Update Schedule</string>
    <string name="button_save">Save</string>
    <string name="date">Date</string>
    <string name="hint_date">Select the Date</string>
    <string name="time">Time</string>
    <string name="hint_time">Select the Time</string>
    <string name="location">Location</string>
    <string name="hint_location">Enter Location</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
