<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shanindu.hearts.activity.fragments.AddElderFragment"
    tools:targetApi="11">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title_add_elder"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/text_eldername"
                android:textSize="16dp" />


            <EditText
                android:id="@+id/edt_eldername"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/rounded_textview"
                android:hint="@string/hint_eldername"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/text_dob"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_dob"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_textview"
                android:drawableRight="@drawable/ic_date_range_black_24dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_dob"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_next_elder"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_next"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>
