<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shanindu.hearts.activity.fragments.AddElderFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="2">


            <CheckBox
                android:id="@+id/chk_bb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/before_breakfast" />

            <CheckBox
                android:id="@+id/chk_ab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/after_breakfast" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="2">


            <CheckBox
                android:id="@+id/chk_bl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/before_lunch" />

            <CheckBox
                android:id="@+id/chk_al"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/after_lunch" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="2">


            <CheckBox
                android:id="@+id/chk_bd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/before_dinner" />

            <CheckBox
                android:id="@+id/chk_ad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/after_dinner" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:weightSum="3">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hours" />

            <Spinner
                android:id="@+id/spinner_hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"></Spinner>


        </LinearLayout>

        <Button
            android:id="@+id/btn_add_prescription_schedule"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_add_schedule"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_update_prescription_schedule"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_update_schedule"
            android:textColor="@color/white"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/dark_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="7">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="B.B"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="A.B"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="B.L"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="A.L"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="B.D"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="A.D"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Hours"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/dark_white" />

        <ListView
            android:id="@+id/list_prescription"
            android:layout_width="match_parent"
            android:layout_height="180dp"></ListView>

        <Button
            android:id="@+id/btn_prescription_save"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>
