<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shanindu.hearts.activity.fragments.AddCaregiverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title_add_caregiver"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <AutoCompleteTextView
                android:id="@+id/edt_eldername"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/rounded_textview"
                android:drawableRight="@drawable/ic_search_black_24dp"
                android:hint="@string/text_serach"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_add_caregiver"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/button_add_caregiver"
                android:textColor="@color/white" />

            <ListView
                android:id="@+id/list_caregiver"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"></ListView>
        </LinearLayout>

        <Button
            android:id="@+id/btn_next_caregiver"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_next"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>
