<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shanindu.hearts.activity.fragments.ConnectivityFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title_connectivity"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_bluetooth_searching_black_24dp" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_search_device"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="100dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_finish"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>
